--- a/sources/api/apiserver/Cargo.toml
+++ b/sources/api/apiserver/Cargo.toml
@@ -10,7 +10,7 @@ build = "build.rs"
 exclude = ["README.md"]
 
 [dependencies]
-actix-web = { version = "3.2.0", default-features = false }
+actix-web = { version = "4.0.0-beta.5", default-features = false }
 bottlerocket-release = { path = "../../bottlerocket-release" }
 datastore = { path = "../datastore" }
 fs2 = "0.4.3"
