--- a/sources/api/static-pods/Cargo.toml
+++ b/sources/api/static-pods/Cargo.toml
@@ -18,9 +18,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 simplelog = "0.10"
 snafu = "0.6"
-tokio = { version = "0.2", default-features = false, features = ["macros", "rt-threaded"] }
-# When we update hyper to 0.14+ which has tokio 1:
-#tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
+tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
 tempfile = "3.2.0"
 
 [build-dependencies]
