--- a/sources/api/thar-be-settings/Cargo.toml
+++ b/sources/api/thar-be-settings/Cargo.toml
@@ -21,9 +21,7 @@ schnauzer = { path = "../schnauzer" }
 serde_json = "1"
 simplelog = "0.10"
 snafu = "0.6"
-tokio = { version = "0.2", default-features = false, features = ["macros", "rt-threaded"] }
-# When hyper updates to tokio 0.3:
-#tokio = { version = "0.3", default-features = false, features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
 
 [build-dependencies]
 cargo-readme = "3.1"
