host-containers: make host containers inherit proxy env vars
host-containers systemd services now reads proxy env vars.
host-ctr passes the proxy env vars to the host containers.
host-containers are added to the list of affected services under
`metadata.settings.network` for all variants

--- a/packages/os/host-containers@.service
+++ b/packages/os/host-containers@.service
@@ -5,6 +5,7 @@ Wants=host-containerd.service
 
 [Service]
 Type=simple
+EnvironmentFile=/etc/network/proxy.env
 EnvironmentFile=/etc/host-containers/%i.env
 Environment=LOCAL_DIR=/local
 # Create directories for container persistent storage
