vmware-dev: Support x86_64 only
This change adds the `supported-arch` key to `vmware-dev`'s `Cargo.toml`
and ensure's the variant will only be built for `x86_64`.

--- a/variants/vmware-dev/Cargo.toml
+++ b/variants/vmware-dev/Cargo.toml
@@ -9,6 +9,7 @@ exclude = ["README.md"]
 
 [package.metadata.build-variant]
 image-format = "vmdk"
+supported-arches = ["x86_64"]
 included-packages = [
 # core
     "release",
