migrations: admin-container v0.6.1 default version migration
Migrates default version of admin container from v0.6.0 to v0.6.1

--- a/Release.toml
+++ b/Release.toml
@@ -30,3 +30,6 @@ version = "1.0.7"
     "migrate_v1.0.6_admin-container-v0-6-0.lz4",
 ]
 "(1.0.6, 1.0.7)" = []
+"(1.0.7, 1.0.8)" = [
+    "migrate_v1.0.8_admin-container-v0-6-1.lz4",
+]
