--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -50,6 +50,7 @@ members = [
     "api/migration/migrations/v1.0.8/kubelet-unsafe-sysctl-kube-reserved",
     "api/migration/migrations/v1.0.8/proxy-affect-host-containers",
     "api/migration/migrations/v1.0.8/control-container-v0-5-0",
+    "api/migration/migrations/v1.0.8/admin-container-v0-7-0",
 
     "bottlerocket-release",
 
