selinux-policy: add file read restrictions
Since host container user data can be used to pass secrets, we should
block reads as well as writes to this content. Similarly, because the
user data is saved in the datastore, we should also restrict access
to those files.

Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/packages/os/host-containers-tmpfiles.conf
+++ b/packages/os/host-containers-tmpfiles.conf
@@ -1,3 +1,3 @@
 d /etc/host-containers 0755 root root -
 d /local/host-containers 0700 root root -
-T /local/host-containers - - - - security.selinux=system_u:object_r:state_t:s0
+T /local/host-containers - - - - security.selinux=system_u:object_r:secret_t:s0
