--- a/packages/libattr/Cargo.toml
+++ b/packages/libattr/Cargo.toml
@@ -9,8 +9,8 @@ build = "build.rs"
 path = "pkg.rs"
 
 [[package.metadata.build-package.external-files]]
-url = "https://download-mirror.savannah.gnu.org/releases/attr/attr-2.4.48.tar.gz"
-sha512 = "75f870a0e6e19b8975f3fdceee786fbaff3eadaa9ab9af01996ffa8e50fe5b2bba6e4c22c44a6722d11b55feb9e89895d0151d6811c1d2b475ef4ed145f0c923"
+url = "https://download-mirror.savannah.gnu.org/releases/attr/attr-2.5.1.tar.xz"
+sha512 = "9e5555260189bb6ef2440c76700ebb813ff70582eb63d446823874977307d13dfa3a347dfae619f8866943dfa4b24ccf67dadd7e3ea2637239fdb219be5d2932"
 
 [build-dependencies]
 glibc = { path = "../glibc" }
