k8s: add setting for configuring serverTLSBootstrap
Adds a new setting `kubernetes.server-tls-bootstrap` for configuring
whether to enable server certificate bootstrap for the kubelet.

--- a/sources/models/src/aws-k8s-1.19/defaults.d/50-aws-k8s.toml
+++ b/sources/models/src/aws-k8s-1.19/defaults.d/50-aws-k8s.toml
@@ -58,6 +58,7 @@ affected-services = ["kubernetes", "containerd"]
 cluster-domain = "cluster.local"
 standalone-mode = false
 authentication-mode = "aws"
+server-tls-bootstrap = true
 
 # Metrics
 [settings.metrics]
