--- a/Release.toml
+++ b/Release.toml
@@ -38,3 +38,6 @@ version = "1.0.8"
     "migrate_v1.0.8_admin-container-v0-7-0.lz4",
     "migrate_v1.0.8_add-bootstrap-containers.lz4"
 ]
+"(1.0.8, 1.1.0)" = [
+    "migrate_v1.1.0_kubelet-server-tls-bootstrap.lz4",
+]
