--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -53,6 +53,7 @@ members = [
     "api/migration/migrations/v1.0.8/control-container-v0-5-0",
     "api/migration/migrations/v1.0.8/admin-container-v0-7-0",
     "api/migration/migrations/v1.0.8/add-bootstrap-containers",
+    "api/migration/migrations/v1.1.0/kubelet-server-tls-bootstrap",
 
     "bottlerocket-release",
 
