--- a/packages/os/bootstrap-containers-tmpfiles.conf
+++ b/packages/os/bootstrap-containers-tmpfiles.conf
@@ -1,3 +1,3 @@
 d /etc/bootstrap-containers 0750 root root -
 d /local/bootstrap-containers 0700 root root -
-T /local/bootstrap-containers - - - - security.selinux=system_u:object_r:state_t:s0
+T /local/bootstrap-containers - - - - security.selinux=system_u:object_r:secret_t:s0
