migrations: add migration for adding `kubernetes.cloud-provider`
Adds a migration for the new `kubernetes.cloud-provider` setting.

--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -54,6 +54,7 @@ members = [
     "api/migration/migrations/v1.0.8/admin-container-v0-7-0",
     "api/migration/migrations/v1.0.8/add-bootstrap-containers",
     "api/migration/migrations/v1.1.0/kubelet-server-tls-bootstrap",
+    "api/migration/migrations/v1.1.0/kubelet-cloud-provider",
 
     "bottlerocket-release",
 
