--- a/sources/api/netdog/Cargo.toml
+++ b/sources/api/netdog/Cargo.toml
@@ -16,6 +16,7 @@ lazy_static = "1.2"
 rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
 regex = "1.1"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1"
 serde_plain = "0.3.0"
 snafu = "0.6"
 
