--- a/sources/api/thar-be-settings/Cargo.toml
+++ b/sources/api/thar-be-settings/Cargo.toml
@@ -16,6 +16,7 @@ http = "0.2"
 itertools = "0.10"
 log = "0.4"
 models = { path = "../../models" }
+nix = "0.20.0"
 schnauzer = { path = "../schnauzer" }
 serde_json = "1"
 simplelog = "0.10"
