Move kernel console settings to variant tomls
This moves console settings like `console=tty0` to variant tomls to
allow for different variants to have different console configurations.

--- a/variants/aws-dev/Cargo.toml
+++ b/variants/aws-dev/Cargo.toml
@@ -8,6 +8,10 @@ build = "build.rs"
 exclude = ["README.md"]
 
 [package.metadata.build-variant]
+kernel-parameters = [
+    "console=tty0",
+    "console=ttyS0",
+]
 included-packages = [
 # core
     "release",
