--- a/variants/aws-k8s-1.19/Cargo.toml
+++ b/variants/aws-k8s-1.19/Cargo.toml
@@ -10,6 +10,10 @@ build = "build.rs"
 exclude = ["README.md"]
 
 [package.metadata.build-variant]
+kernel-parameters = [
+    "console=tty0",
+    "console=ttyS0",
+]
 included-packages = [
     "aws-iam-authenticator",
     "cni",
