--- a/variants/vmware-dev/Cargo.toml
+++ b/variants/vmware-dev/Cargo.toml
@@ -10,6 +10,10 @@ exclude = ["README.md"]
 [package.metadata.build-variant]
 image-format = "vmdk"
 supported-arches = ["x86_64"]
+kernel-parameters = [
+    "console=ttyS0",
+    "console=tty1",
+]
 included-packages = [
 # core
     "release",
