migrations: add migration for adding event-qps and event-burst
Adds a migration for two new settings `settings.kubernetes.event-qps`
and `settings.kubernetes.event-burst`

--- a/Release.toml
+++ b/Release.toml
@@ -43,4 +43,5 @@ version = "1.0.8"
     "migrate_v1.1.0_kubelet-cloud-provider.lz4",
     "migrate_v1.1.0_kubelet-registry-qps-registry-burst.lz4",
     "migrate_v1.1.0_shared-containerd-configs.lz4",
+    "migrate_v1.1.0_kubelet-event-qps-event-burst.lz4",
 ]
