--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -28,6 +28,7 @@ members = [
     "api/migration/migrations/v1.1.0/kubelet-cloud-provider",
     "api/migration/migrations/v1.1.0/kubelet-registry-qps-registry-burst",
     "api/migration/migrations/v1.1.0/shared-containerd-configs",
+    "api/migration/migrations/v1.1.0/kubelet-event-qps-event-burst",
 
     "bottlerocket-release",
 
