--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -56,6 +56,7 @@ members = [
     "api/migration/migrations/v1.1.0/kubelet-server-tls-bootstrap",
     "api/migration/migrations/v1.1.0/kubelet-cloud-provider",
     "api/migration/migrations/v1.1.0/kubelet-registry-qps-registry-burst",
+    "api/migration/migrations/v1.1.0/shared-containerd-configs",
 
     "bottlerocket-release",
 
