refactor dependencies on host-ctr
Conceptually, `host-ctr` is another tool we expect to be present in
the OS, like `systemctl`.

Practically, this lets us start the `os` build sooner, which is nice
because it's one of the longest.

Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/packages/os/Cargo.toml
+++ b/packages/os/Cargo.toml
@@ -29,4 +29,6 @@ glibc = { path = "../glibc" }
 
 # RPM Requires
 [dependencies]
-host-ctr = { path = "../host-ctr" }
+# We depend on `host-ctr` for host containers functionality, but only need it
+# at runtime, and expect it to be pulled in by way of the `release` package.
+# host-ctr = { path = "../host-ctr" }
