refactor dependencies on containerd
All of the packages that depend on containerd need it at runtime, and
not at build time. To streamline the overall build, treat containerd
as an implicit dependency, like systemd or glibc.

Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/packages/docker-engine/Cargo.toml
+++ b/packages/docker-engine/Cargo.toml
@@ -20,6 +20,7 @@ systemd = { path = "../systemd" }
 
 # RPM Requires
 [dependencies]
-containerd = { path = "../containerd" }
+# `containerd` is only needed at runtime, and is pulled in by `release`.
+# containerd = { path = "../containerd" }
 iptables = { path = "../iptables" }
 procps = { path = "../procps" }
