refactor dependencies on iptables
All of the packages that depend on iptables need it at runtime, and
not at build time. To streamline the overall build, treat iptables
as an implicit dependency, like systemd or glibc.

Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/packages/cni-plugins/Cargo.toml
+++ b/packages/cni-plugins/Cargo.toml
@@ -18,4 +18,5 @@ glibc = { path = "../glibc" }
 
 # RPM Requires
 [dependencies]
-iptables = { path = "../iptables" }
+# `iptables` is only needed at runtime, and is pulled in by `release`.
+# iptables = { path = "../iptables" }
