--- a/packages/cni/Cargo.toml
+++ b/packages/cni/Cargo.toml
@@ -18,4 +18,5 @@ glibc = { path = "../glibc" }
 
 # RPM Requires
 [dependencies]
-iptables = { path = "../iptables" }
+# `iptables` is only needed at runtime, and is pulled in by `release`.
+# iptables = { path = "../iptables" }
