--- a/packages/kubernetes-1.16/Cargo.toml
+++ b/packages/kubernetes-1.16/Cargo.toml
@@ -32,6 +32,7 @@ glibc = { path = "../glibc" }
 # RPM Requires
 [dependencies]
 conntrack-tools = { path = "../conntrack-tools" }
-# `containerd` is only needed at runtime, and is pulled in by `release`.
+# `containerd` and `findutils` are only needed at runtime, and are pulled in by
+# `release`.
 # containerd = { path = "../containerd" }
-findutils = { path = "../findutils" }
+# findutils = { path = "../findutils" }
