--- a/packages/docker-engine/Cargo.toml
+++ b/packages/docker-engine/Cargo.toml
@@ -20,8 +20,8 @@ systemd = { path = "../systemd" }
 
 # RPM Requires
 [dependencies]
-# `containerd` and `iptables` are only needed at runtime, and are pulled in by
-# `release`.
+# `containerd`, `iptables`, and `procps` are only needed at runtime, and are
+# pulled in by `release`.
 # containerd = { path = "../containerd" }
 # iptables = { path = "../iptables" }
-procps = { path = "../procps" }
+# procps = { path = "../procps" }
