ecs-agent: mask requirement on docker-engine
The docker-engine package is listed in the variant definition, and we
don't need it as a build-time requirement.

Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/packages/ecs-agent/Cargo.toml
+++ b/packages/ecs-agent/Cargo.toml
@@ -31,6 +31,8 @@ glibc = { path = "../glibc" }
 
 # RPM Requires
 [dependencies]
-docker-engine = { path = "../docker-engine" }
+# `docker-engine` is only needed at runtime, and is included in the variant
+# definition.
+# docker-engine = { path = "../docker-engine" }
 # `iptables` is only needed at runtime, and is pulled in by `release`.
 # iptables = { path = "../iptables" }
