--- a/variants/vmware-dev/Cargo.toml
+++ b/variants/vmware-dev/Cargo.toml
@@ -18,6 +18,7 @@ included-packages = [
 # core
     "release",
     "kernel-5.10",
+    "open-vm-tools",
 # docker
     "docker-cli",
     "docker-engine",
@@ -40,6 +41,7 @@ path = "lib.rs"
 # core
 release = { path = "../../packages/release" }
 kernel-5_10 = { path = "../../packages/kernel-5.10" }
+open-vm-tools = { path = "../../packages/open-vm-tools" }
 # docker
 docker-cli = { path = "../../packages/docker-cli" }
 docker-engine = { path = "../../packages/docker-engine" }
