--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -30,6 +30,7 @@ members = [
     "api/migration/migrations/v1.1.0/shared-containerd-configs",
     "api/migration/migrations/v1.1.0/kubelet-event-qps-event-burst",
     "api/migration/migrations/v1.1.0/schnauzer-paws",
+    "api/migration/migrations/v1.1.0/kubelet-kube-api-qps-kube-api-burst",
 
     "bottlerocket-release",
 
