--- a/packages/release/release-sysctl.conf
+++ b/packages/release/release-sysctl.conf
@@ -28,8 +28,8 @@ net.ipv4.ip_default_ttl = 255
 # Enable IPv4 forwarding for container networking.
 net.ipv4.conf.all.forwarding = 1
 
-# Have a larger connection range available
-net.ipv4.ip_local_port_range = 1025 65000
+# This is generally considered a safe ephemeral port range
+net.ipv4.ip_local_port_range = 32768 60999
 
 # Connection tracking to prevent dropped connections
 net.netfilter.nf_conntrack_max = 1048576
